--- a/index.html
+++ b/index.html
@@ -27,7 +27,31 @@
   <header>
     <img alt="Logo" class="logo" src="imagens/logo_taxi.jpeg" />
     <h1>Clube Nissan Kicks Táxi</h1>
-  </header>
+  
+  <div class="menu-hamburguer">
+    <div class="hamburguer-icon" onclick="toggleSubmenu()">☰</div>
+    <div class="submenu-container" id="submenu">
+      <div class="submenu-item">Testa aqui 1</div>
+      <div class="submenu-item">Testando aqui 2</div>
+      <div class="submenu-item">Testando aqui 3</div>
+      <div class="submenu-item">Testando aqui 4</div>
+    </div>
+  </div>
+</header>
+
+
+  <!-- 🍔 MENU HAMBÚRGUER (mobile) -->
+  <!--REMOVER-ABAIXO-->
+<div class="menu-hamburguer">
+    <div class="hamburguer-icon" onclick="toggleSubmenu()">☰</div>
+    <div class="submenu-container" id="submenu">
+      <div class="submenu-item">Testa aqui 1</div>
+      <div class="submenu-item">Testando aqui 2</div>
+      <div class="submenu-item">Testando aqui 3</div>
+      <div class="submenu-item">Testando aqui 4</div>
+    </div>
+  </div>
+
 
   <!-- Carrossel infinito -->
   <div class="container">
