--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8" />
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
   <title>Clube Nissan Kicks Táxi</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+
   <link href="styles.css" rel="stylesheet" />
   <!-- Firebase SDKs -->
   <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
@@ -27,19 +29,19 @@
   <header>
     <img alt="Logo" class="logo" src="imagens/logo_taxi.jpeg" />
     <h1>Clube Nissan Kicks Táxi</h1>
-  
-  <!-- 🍔 MENU HAMBÚRGUER NO TOPO DIREITO -->
-  <div class="menu-hamburguer">
-    <div class="hamburguer-icon" onclick="toggleSubmenu()">☰</div>
-    <div class="submenu-container" id="submenu">
-      <div class="submenu-item">Testa aqui 1</div>
-      <div class="submenu-item">Testando aqui 2</div>
-      <div class="submenu-item">Testando aqui 3</div>
-      <div class="submenu-item">Testando aqui 4</div>
-    </div>
-  </div>
 
-</header>
+    <!-- 🍔 MENU HAMBÚRGUER NO TOPO DIREITO -->
+    <div class="menu-hamburguer">
+      <div class="hamburguer-icon" onclick="toggleSubmenu()">☰</div>
+      <div class="novo-submenu" id="novoSubmenu">
+        <div class="novo-submenu-item">Página Inicial</div>
+        <div class="novo-submenu-item">Área do ADM</div>
+        <div class="novo-submenu-item">Seja Parceiro</div>
+        <div class="novo-submenu-item">Contato</div>
+      </div>
+    </div>
+
+  </header>
 
   <div class="container">
     <div class="highlights">
