--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@500;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <link href="styles.css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
   <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-database-compat.js"></script>
   <script>
@@ -49,8 +50,8 @@
       </div>
       <!-- Submenu para Serviços -->
       <div class="submenu-servicos" id="submenuServicos">
-        <div class="novo-submenu-item">Opção 1</div>
-        <div class="novo-submenu-item">Opção 2</div>
+        <div class="novo-submenu-item" onclick="abrirSubmenuGoogle(event)">Opção 1</div>
+        <div class="novo-submenu-item" onclick="abrir_submenu_servico_capasbanco(event)">Opção 2</div>
         <div class="novo-submenu-item">Opção 3</div>
         <div class="novo-submenu-item">Opção 4</div>
         <div class="novo-submenu-item">Opção 5</div>
