--- a/paginas/index.html
+++ b/paginas/index.html
@@ -50,8 +50,8 @@
       </div>
       <!-- Submenu para Serviços -->
       <div class="submenu-servicos" id="submenuServicos">
-        <div class="novo-submenu-item">Opção 1</div>
-        <div class="novo-submenu-item">Opção 2</div>
+        <div class="novo-submenu-item" onclick="abrirSubmenuGoogle(event)">Opção 1</div>
+        <div class="novo-submenu-item" onclick="abrir_submenu_servico_capasbanco(event)">Opção 2</div>
         <div class="novo-submenu-item">Opção 3</div>
         <div class="novo-submenu-item">Opção 4</div>
         <div class="novo-submenu-item">Opção 5</div>
