--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
   <meta charset="utf-8" />
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
   <title>Clube Nissan Kicks Táxi</title>
+  <link href="styles.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@500;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
-  <link href="styles.css" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
   <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-database-compat.js"></script>
   <script>
@@ -26,16 +25,17 @@
 </head>
 
 <body>
+
   <header>
     <img alt="Logo" class="logo" src="imagens/logo_taxi.webp" />
     <h1>Clube Nissan Kicks Táxi</h1>
     <div class="menu-hamburguer">
       <div class="hamburguer-icon" onclick="toggleSubmenu()">☰</div>
       <div class="novo-submenu" id="novoSubmenu">
-        <div class="novo-submenu-item">Página Inicial</div>
-        <div class="novo-submenu-item">Área do ADM</div>
-        <div class="novo-submenu-item">Seja Parceiro</div>
-        <div class="novo-submenu-item">Contato</div>
+        <div class="novo-submenu-item" onclick="abrirPaginaInicial(event)">Página Inicial</div>
+        <div class="novo-submenu-item" onclick="abrirAreaAdm(event)">Área do ADM</div>
+        <div class="novo-submenu-item" onclick="abrirSejaParceiro(event)">Seja Parceiro</div>
+        <div class="novo-submenu-item" onclick="abrirContato(event)">Contato</div>
       </div>
     </div>
   </header>
@@ -48,7 +48,8 @@
         </div>
         <div class="label">Serviços</div>
       </div>
-      <!-- Submenu para Serviços -->
+
+      <!-- Submenu Serviços -->
       <div class="submenu-servicos" id="submenuServicos">
         <div class="novo-submenu-item" onclick="abrirSubmenuGoogle(event)">Opção 1</div>
         <div class="novo-submenu-item" onclick="abrir_submenu_servico_capasbanco(event)">Opção 2</div>
@@ -64,26 +65,30 @@
         </div>
         <div class="label">Notícias</div>
       </div>
+
       <div class="botao-wrapper">
         <div class="highlight botao_manual" onclick="abrirbotao_Manual()">
           <img alt="Manual" src="imagens/botao_manual.webp" />
         </div>
         <div class="label">Manual</div>
       </div>
+
       <div class="botao-wrapper">
         <div class="highlight botao_faq" onclick="abrirbotao_faq()">
-          <img alt="botao_faq" src="imagens/botao_faq.webp" />
+          <img alt="FAQ" src="imagens/botao_faq.webp" />
         </div>
-        <div class="label">Faq</div>
+        <div class="label">FAQ</div>
       </div>
+
       <div class="botao-wrapper">
         <div class="highlight botao_posto" onclick="abrirbotao_posto()">
-          <img alt="botao_faq" src="imagens/botao_posto.webp" />
+          <img alt="Posto" src="imagens/botao_posto.webp" />
         </div>
         <div class="label">Postos/Preço</div>
       </div>
     </div>
   </div>
+
   <script src="scripts.js"></script>
 </body>
 
