--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
 
       <!-- Submenu Serviços -->
       <div class="submenu-servicos" id="submenuServicos">
-        <div class="novo-submenu-item" onclick="abrirSubmenuGoogle(event)">Opção 1</div>
-        <div class="novo-submenu-item" onclick="abrir_submenu_servico_capasbanco(event)">Opção 2</div>
-        <div class="novo-submenu-item">Opção 3</div>
-        <div class="novo-submenu-item">Opção 4</div>
-        <div class="novo-submenu-item">Opção 5</div>
-        <div class="novo-submenu-item">Opção 6</div>
+        <div class="novo-submenu-item" onclick="abrirSubmenuGoogle(event)">Troca de Óleo Motor/Câmbio</div>
+        <div class="novo-submenu-item" onclick="abrir_submenu_servico_capasbanco(event)">Capas Banco</div>
+        <div class="novo-submenu-item">Suspensão</div>
+        <div class="novo-submenu-item">Oficinas</div>
+        <div class="novo-submenu-item">Despachantes</div>
+        <div class="novo-submenu-item">Links de peças</div>
       </div>
 
       <div class="botao-wrapper">
