--- a/taxista.html
+++ b/taxista.html
@@ -1,99 +1,66 @@
-<!DOCTYPE html>
+<script type="text/javascript">
+        var gk_isXlsx = false;
+        var gk_xlsxFileLookup = {};
+        var gk_fileData = {};
+        function filledCell(cell) {
+          return cell !== '' && cell != null;
+        }
+        function loadFileData(filename) {
+        if (gk_isXlsx && gk_xlsxFileLookup[filename]) {
+            try {
+                var workbook = XLSX.read(gk_fileData[filename], { type: 'base64' });
+                var firstSheetName = workbook.SheetNames[0];
+                var worksheet = workbook.Sheets[firstSheetName];
+
+                // Convert sheet to JSON to filter blank rows
+                var jsonData = XLSX.utils.sheet_to_json(worksheet, { header: 1, blankrows: false, defval: '' });
+                // Filter out blank rows (rows where all cells are empty, null, or undefined)
+                var filteredData = jsonData.filter(row => row.some(filledCell));
+
+                // Heuristic to find the header row by ignoring rows with fewer filled cells than the next row
+                var headerRowIndex = filteredData.findIndex((row, index) =>
+                  row.filter(filledCell).length >= filteredData[index + 1]?.filter(filledCell).length
+                );
+                // Fallback
+                if (headerRowIndex === -1 || headerRowIndex > 25) {
+                  headerRowIndex = 0;
+                }
+
+                // Convert filtered JSON back to CSV
+                var csv = XLSX.utils.aoa_to_sheet(filteredData.slice(headerRowIndex)); // Create a new sheet from filtered array of arrays
+                csv = XLSX.utils.sheet_to_csv(csv, { header: 1 });
+                return csv;
+            } catch (e) {
+                console.error(e);
+                return "";
+            }
+        }
+        return gk_fileData[filename] || "";
+        }
+        </script><!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Taxista</title>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-  <style>
-    html, body, #mapa {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      width: 100%;
-    }
-    #status {
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      background: white;
-      padding: 10px;
-      border-radius: 6px;
-      font-size: 14px;
-      z-index: 1000;
-      box-shadow: 0 0 5px rgba(0,0,0,0.3);
-    }
-  </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Taxista - Localização</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.14.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.14.1/firebase-database-compat.js"></script>
 </head>
-<body>
-  <div id="status">🔄 Localizando...</div>
-  <div id="mapa"></div>
-
-  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
-    import { getDatabase, ref, set, onDisconnect, onValue } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-database.js";
-    import { getAuth, signInAnonymously, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
-
-    const firebaseConfig = {
-      apiKey: "AIzaSyBfBqOOcOmog_6V9ZUxc02PtVYv2Z64mEQ",
-      authDomain: "autofaq-c0c21.firebaseapp.com",
-      databaseURL: "https://autofaq-c0c21-default-rtdb.firebaseio.com",
-      projectId: "autofaq-c0c21",
-      storageBucket: "autofaq-c0c21.appspot.com",
-      messagingSenderId: "174442660737",
-      appId: "1:174442660737:web:2c2405b7bc3439c10a1e80"
-    };
-
-    const app = initializeApp(firebaseConfig);
-    const db = getDatabase(app);
-    const auth = getAuth();
-
-    const status = document.getElementById("status");
-    const mapa = L.map("mapa").setView([-14.235, -51.925], 5);
-
-    L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
-      attribution: '&copy; OpenStreetMap contributors'
-    }).addTo(mapa);
-
-    let marcador;
-    let uid;
-
-    signInAnonymously(auth).then(() => {
-      onAuthStateChanged(auth, user => {
-        if (user) {
-          uid = user.uid;
-          const userRef = ref(db, "taxistasOnline/" + uid);
-
-          onDisconnect(userRef).remove();
-
-          if (navigator.geolocation) {
-            navigator.geolocation.watchPosition(pos => {
-              const lat = pos.coords.latitude;
-              const lon = pos.coords.longitude;
-
-              status.textContent = `🟢 Sua posição: ${lat.toFixed(5)}, ${lon.toFixed(5)}`;
-
-              set(userRef, {
-                nome: "Taxista",
-                latitude: lat,
-                longitude: lon
-              });
-
-              if (marcador) mapa.removeLayer(marcador);
-              marcador = L.marker([lat, lon]).addTo(mapa);
-              marcador.bindPopup("Você está aqui").openPopup();
-              mapa.setView([lat, lon], 15);
-
-            }, err => {
-              status.textContent = "❌ Erro ao obter GPS: " + err.message;
-            });
-          } else {
-            status.textContent = "❌ Geolocalização não suportada.";
-          }
-        }
-      });
-    });
+<body class="bg-gray-100">
+  <div class="container mx-auto p-4">
+    <h1 class="text-2xl font-bold mb-4">Taxista - Localização</h1>
+    <div id="map" class="h-96 rounded-lg"></div>
+    <div class="mt-4">
+      <p id="status" class="text-lg">🔄 Localizando...</p>
+      <button id="toggle-active" class="bg-blue-500 text-white py-2 px-4 rounded-lg mt-2 hover:bg-blue-600">Ativar Localização</button>
+    </div>
+  </div>
+  <script src="app.js"></script>
+  <script>
+    initializeDriver();
   </script>
 </body>
 </html>
