--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Escolha seu perfil</title>
+  <title>Escolha o seu perfil</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100 flex items-center justify-center h-screen">
+<body class="flex items-center justify-center h-screen bg-gray-100">
   <div class="text-center">
-    <h1 class="text-3xl font-bold mb-8">Escolha o seu perfil</h1>
+    <h1 class="text-3xl font-bold mb-6">Escolha o seu perfil</h1>
     <div class="space-y-4">
-      <a href="taxista.html" class="block bg-blue-500 text-white py-3 px-6 rounded-lg text-lg hover:bg-blue-600">Sou Taxista</a>
-      <a href="passageiro.html" class="block bg-green-500 text-white py-3 px-6 rounded-lg text-lg hover:bg-green-600">Sou Passageiro</a>
+      <a href="taxista.html" class="block w-64 mx-auto bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-600">Sou Taxista</a>
+      <a href="passageiro.html" class="block w-64 mx-auto bg-green-500 text-white py-2 px-4 rounded-lg hover:bg-green-600">Sou Passageiro</a>
     </div>
   </div>
 </body>
