--- a/passageiro.html
+++ b/passageiro.html
@@ -46,22 +46,20 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.14.1/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.14.1/firebase-database-compat.js"></script>
 </head>
 <body class="bg-gray-100">
   <div class="container mx-auto p-4">
-    <h1 class="text-2xl font-bold mb-4">Passageiro - Buscar Motorista</h1>
-    <div id="map" class="h-96 rounded-lg"></div>
-    <div class="mt-4">
-      <p id="status" class="text-lg">🔄 Buscando motoristas...</p>
-      <div id="drivers-list" class="mt-4"></div>
-      <button id="call-driver" class="bg-green-500 text-white py-2 px-4 rounded-lg mt-2 hover:bg-green-600 hidden">Chamar Taxista</button>
-    </div>
+    <h1 class="text-2xl font-bold text-center mb-4">Passageiro - Buscar Motorista</h1>
+    <div id="status" class="text-center mb-4">🔄 Buscando motoristas...</div>
+    <div id="map" class="h-96 w-full rounded-lg shadow mb-4"></div>
+    <ul id="drivers-list" class="mb-4"></ul>
+    <button id="call-driver" class="hidden w-full bg-green-500 text-white py-2 px-4 rounded-lg hover:bg-green-600">Chamar Taxista</button>
   </div>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js"></script>
   <script src="app.js"></script>
   <script>
-    initializePassenger();
+    document.addEventListener('DOMContentLoaded', initializePassenger);
   </script>
 </body>
 </html>
