--- a/passageiro.html
+++ b/passageiro.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Passageiro - Buscar Motorista</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 </head>
+
 <body class="bg-gray-100">
   <div class="container mx-auto p-4">
     <h1 class="text-2xl font-bold text-center mb-4">Passageiro - Buscar Motorista</h1>
     <div id="status" class="text-center mb-4">🔄 Buscando motoristas...</div>
     <div id="map" class="h-96 w-full rounded-lg shadow mb-4"></div>
     <ul id="drivers-list" class="mb-4"></ul>
-    <button id="call-driver" class="hidden w-full bg-green-500 text-white py-2 px-4 rounded-lg hover:bg-green-600">Chamar Taxista</button>
+    <button id="call-driver"
+      class="hidden w-full bg-green-500 text-white py-2 px-4 rounded-lg hover:bg-green-600">Chamar Taxista</button>
   </div>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js"></script>
@@ -23,4 +26,5 @@
     document.addEventListener('DOMContentLoaded', initializePassenger);
   </script>
 </body>
+
 </html>
