--- a/passageiro.html
+++ b/passageiro.html
@@ -19,8 +19,10 @@
     <button id="call-driver"
       class="hidden w-full bg-green-500 text-white py-2 px-4 rounded-lg hover:bg-green-600">Chamar Taxista</button>
   </div>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js"></script>
+
+  <!-- Firebase versão compatível com app.js -->
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
   <script src="app.js"></script>
   <script>
     document.addEventListener('DOMContentLoaded', initializePassenger);
