--- a/passageiro.html
+++ b/passageiro.html
@@ -13,22 +13,14 @@
 <body class="bg-gray-100">
   <div class="container mx-auto p-4">
     <h1 class="text-2xl font-bold text-center mb-4">Passageiro - Buscar Motorista</h1>
-
-    <div id="status" class="text-center mb-4">🔄 Obtendo localização...</div>
+    <div id="status" class="text-center mb-4">🔄 Buscando motoristas...</div>
     <div id="map" class="h-96 w-full rounded-lg shadow mb-4"></div>
-
-    <div id="location-confirmation" class="hidden mb-4">
-      <label class="block text-sm font-medium text-gray-700 mb-1">Endereço:</label>
-      <input id="address-input" type="text" class="w-full p-2 border border-gray-300 rounded-lg mb-2"
-        placeholder="Digite seu endereço">
-      <button id="ok-button" class="w-full bg-blue-600 text-white py-2 px-4 rounded-lg hover:bg-blue-700">OK</button>
-    </div>
-
     <ul id="drivers-list" class="mb-4"></ul>
     <button id="call-driver"
       class="hidden w-full bg-green-500 text-white py-2 px-4 rounded-lg hover:bg-green-600">Chamar Taxista</button>
   </div>
 
+  <!-- Firebase versão compatível com app.js -->
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
   <script src="app.js"></script>
