--- a/index.html
+++ b/index.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Escolha o seu perfil</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <!-- Firebase JS SDK -->
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+  <script src="app.js"></script>
+  <script>
+    firebase.auth().onAuthStateChanged(user => {
+      if (!user) {
+        window.location.replace('login.html');
+      }
+    });
+  </script>
 </head>
-
 <body class="flex items-center justify-center h-screen bg-gray-100">
   <div class="text-center">
-    <h1 class="text-3xl font-bold mb-6">Escolha o seu perfil1</h1>
+    <h1 class="text-3xl font-bold mb-6">Escolha o seu perfil</h1>
     <div class="space-y-4">
       <a href="taxista.html"
         class="block w-64 mx-auto bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-600">Sou Taxista</a>
@@ -19,5 +28,4 @@
     </div>
   </div>
 </body>
-
 </html>
