--- a/login.html
+++ b/login.html
@@ -1,32 +1,22 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Login</title>
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
+  <title>Entrar</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100 flex items-center justify-center h-screen">
-  <div class="w-full max-w-md bg-white p-6 rounded-lg shadow">
-    <h1 class="text-2xl font-bold mb-4">Entrar</h1>
+<body class="bg-blue-600 flex items-center justify-center h-screen p-4">
+  <div class="w-full max-w-sm bg-white rounded-2xl shadow p-6">
+    <h1 class="text-2xl font-bold text-center mb-6">Bem-vindo</h1>
     <form id="login-form" class="space-y-4">
-      <div>
-        <label class="block">E-mail:</label>
-        <input type="email" id="email" required placeholder="seu@exemplo.com"
-               class="w-full border rounded px-3 py-2"/>
-      </div>
-      <div>
-        <label class="block">Senha:</label>
-        <input type="password" id="password" required placeholder="Senha (mín. 6 dígitos)"
-               class="w-full border rounded px-3 py-2"/>
-      </div>
-      <button type="submit"
-              class="w-full bg-blue-500 text-white py-2 rounded hover:bg-blue-600">Login</button>
+      <input type="tel" id="phone" placeholder="(XX) XXXXX-XXXX" required class="w-full border rounded px-3 py-2 text-lg"/>
+      <input type="password" id="password" placeholder="Senha (mín. 6 dígitos)" required class="w-full border rounded px-3 py-2 text-lg"/>
+      <button type="submit" class="w-full bg-blue-500 text-white py-2 rounded-full text-lg hover:bg-blue-600">Entrar</button>
     </form>
-    <p class="mt-4 text-center">Não tem conta? <a href="signup.html" class="text-blue-500 hover:underline">Cadastre-se</a></p>
+    <button id="btn-anon" class="w-full mt-4 bg-gray-200 text-gray-700 py-2 rounded-full hover:bg-gray-300">Entrar como anônimo</button>
+    <p class="mt-6 text-center text-sm text-gray-600">Ainda não tem cadastro? <a href="signup.html" class="text-blue-500 hover:underline">Cadastre-se</a></p>
   </div>
-
-  <!-- Firebase JS SDK (v8.x) -->
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
   <script src="app.js"></script>
