--- a/login.html
+++ b/login.html
@@ -2,20 +2,20 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-  <title>Entrar</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Login</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-blue-600 flex items-center justify-center h-screen p-4">
-  <div class="w-full max-w-sm bg-white rounded-2xl shadow p-6">
-    <h1 class="text-2xl font-bold text-center mb-6">Bem-vindo</h1>
+<body class="bg-white flex items-center justify-center h-screen p-4">
+  <div class="w-full max-w-sm space-y-6 text-center">
+    <img src="logo.webp" alt="SouTaxi" class="mx-auto w-32" />
     <form id="login-form" class="space-y-4">
-      <input type="tel" id="phone" placeholder="(XX) XXXXX-XXXX" required class="w-full border rounded px-3 py-2 text-lg"/>
-      <input type="password" id="password" placeholder="Senha (mín. 6 dígitos)" required class="w-full border rounded px-3 py-2 text-lg"/>
-      <button type="submit" class="w-full bg-blue-500 text-white py-2 rounded-full text-lg hover:bg-blue-600">Entrar</button>
+      <input id="email" type="email" placeholder="Email" required class="w-full border rounded px-3 py-2"/>
+      <input id="password" type="password" placeholder="Senha" required class="w-full border rounded px-3 py-2"/>
+      <button type="submit" class="w-full bg-blue-500 text-white py-2 rounded">Entrar</button>
     </form>
-    <button id="btn-anon" class="w-full mt-4 bg-gray-200 text-gray-700 py-2 rounded-full hover:bg-gray-300">Entrar como anônimo</button>
-    <p class="mt-6 text-center text-sm text-gray-600">Ainda não tem cadastro? <a href="signup.html" class="text-blue-500 hover:underline">Cadastre-se</a></p>
+    <button id="btn-autonomo" class="w-full bg-gray-300 text-black py-2 rounded">Entrar como Autônomo</button>
+    <p class="text-sm">Não tem cadastro? <a href="signup.html" class="text-blue-600 underline">Cadastre-se</a></p>
   </div>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
